personal profile image alignment

--- a/ideal_job.html
+++ b/ideal_job.html
@@ -9,6 +9,7 @@
       <h3>Ideal<br>Job</h3>
     </header>
     <main>
+      <p>Data & Evaluation Lead, PANDA (Perinatal Anxiety & Depression Australia)</p>
       <p><a href="https://www.seek.com.au/job/53537638?type=standout#searchRequestToken=4527c51c-1e42-48df-b394-9057499ed98d">Job advertisement on seek.com.au (Now expired)</a></p>
       <div class="ideal_job_images">
         <img src="images/ideal_job_1.png" alt="screenshot 1 of my ideal job from advertisement">
