--- a/personal_profile.html
+++ b/personal_profile.html
@@ -9,24 +9,28 @@
       <div class="personal_profile_header">
         <h3>Personal<br>Profile</h3>
         <img src="images/personality_head.png" alt="my personality logo">
+        <img src="images/personality_summary.png" alt="my personality summary showing that I am a turbulent architect code INTJ-T ">
       </div>
     </header>
     <main>
-      <img src="images/personality_summary.png" alt="my personality summary showing that I am a turbulent architect code INTJ-T ">
       <img src="images/personality_details.png" alt="details of my myer briggs personality test 94% introverted, 66% intuitive, 59% thinking, 65% judging, 74% turbulent">
       <p>My Myers-Briggs test gave me the result of a turbulent architect. When I read through this profile I felt that it fitted me perfectly, and it made me feel quite validated. It is a rare personality type that struggles to fit in and is capable yet full of self-doubt. I feel like this is an excellent description of me. </p>
       <p>I am agreeable and conscientious. I have a great desire to contribute, do good work and gain the praise of others. However I am shy, have difficulty being a leader, and lack confidence in my own ideas. </p>
       <p>In particular I appreciated the differentiation between turbulent and assertive architect types. They are quite different, and I feel like the turbulent aspect accounts for much of my confusion in life and insecurity. My internal monologue is a constant contradiction between feeling competent and feeling useless. I relate to the social frustrations that architects face, I find every relationship a great challenge, from workplace to romantic, even parenting. I believe I have the insight and analytical skills that architects commonly possess, and share their tendency to exhaustingly overthink every aspect of life. As a turbulent architect, I do not share the same single-minded drive and ambition of assertive types, but perhaps my relationships benefit slightly from my being more conciliatory and consultative. I do feel like I am very strategic with my choices, constantly analysing decisions for optimum input, output and efficiency. This can result in paralysis, however, and wasted effort striving for perfection instead of completion.</p>
       <p>I work best under a leader with a strong vision, who gives me tasks, and who recognises my efforts. I am happy to help other people in their work and love to support other people to shine. I am sensitive to criticism, but am motivated by praise and acknowledgment. </p>
       <p>I am a good support player, able to run with other people's ideas and produce good work towards a common goal. </p>
-      <img src="images/learning_style_1.png" alt="quiz showing my learning style to be kinaesthetic">
-      <img src="images/learning_style_2.png" alt="quiz showing my learning style to be auditory">
-      <img src="images/learning_style_3.png" alt="quiz showing my learning style to be visual">
+      <div class="ideal_job_images">
+        <img src="images/learning_style_1.png" alt="quiz showing my learning style to be kinaesthetic">
+        <img src="images/learning_style_2.png" alt="quiz showing my learning style to be auditory">
+        <img src="images/learning_style_3.png" alt="quiz showing my learning style to be visual">
+      </div>
       <p>My learning style scores were all over the place. This indicates to me that my learning style is highly situational, and dependent on the subject matter. I think I should adopt a learning strategy that incorporates all different types because I do not show a strong preference for any particular style. I did score slightly higher in visual and kinesthetic learning styles, so it would be useful to keep that in mind when designing learning strategies for myself. In group situations it would be useful for myself and other visual learners if I was to translate some of the discussion into charts and diagrams. When attempting to solve difficult problems it would be useful for me to get outside and move to help lubricate my thoughts. </p>
       <p>I also undertook the Big 5 personality test. This revealed that I was high in openness and agreeableness, and low in extraversion. I think this shows I would be a useful team member. While not a natural leader or overly talkative, I will value and support other people's ideas and work hard towards implementing them. I will consider unconventional solutions to problems and not seek personal reward or recognition for team accomplishments. </p>
-      <img src="images/big_five_1.png" alt="big five personality trait scores showing 85% openness, 69% conscientiousness, 10% extraversion, 54% agreeableness, 75% neuroticism">
-      <img src="images/big_five_3.png" alt="details of the extraversion big five test">
-      <img src="images/big_five_4.png" alt="details of the conscientiousness big five test">
+      <div class="ideal_job_images">
+        <img src="images/big_five_1.png" alt="big five personality trait scores showing 85% openness, 69% conscientiousness, 10% extraversion, 54% agreeableness, 75% neuroticism">
+        <img src="images/big_five_3.png" alt="details of the extraversion big five test">
+        <img src="images/big_five_4.png" alt="details of the conscientiousness big five test">
+      </div>
       <p>I believe the results of the Myers-Briggs and Big 5 personality tests were highly accurate reflections of my personality, both its advantages and disadvantages. Being cognizant of these will help me to work to my strengths and not be hindered by my shortcomings. </p>
       <p>The various learning style tests I conducted were not particularly insightful as the results varied considerably across the tests. They were useful in informing me of the different learning styles so that I can attempt different methods of learning in the future to try to discern any preference I may have.</p>
       <p>When forming a team I need to ensure there is at least one strong leader, and some extroverted people, to offset my shyness and self doubt. I will work very productively and supportively in a team with positive, enthusiastic people, with clear goals and a direct and efficient approach to taking a project from inception to conclusion. I should avoid forming a team that has negative or critical types, as they will reduce my motivation and paralyse my productivity with over-analysis and self doubt. I should also avoid team members that procrastinate or prefer lengthy discussion over productivity.</p>
