personal profile css

--- a/personal_profile.html
+++ b/personal_profile.html
@@ -8,7 +8,7 @@
     <header>
       <div class="personal_profile_header">
         <h3>Personal<br>Profile</h3>
-        <img style="height: 50px; width: auto;" src="images/personality_head.png" alt="my personality logo">
+        <img style="align-items: center; height: 100px; width: auto;" src="images/personality_head.png" alt="my personality logo">
       </div>
     </header>
     <main>
@@ -23,7 +23,7 @@
         <img src="images/learning_style_1.png" alt="quiz showing my learning style to be kinaesthetic">
         <img src="images/learning_style_3.png" alt="quiz showing my learning style to be visual">
       </div>
-      <img src="images/learning_style_2.png" alt="quiz showing my learning style to be auditory">
+      <img src="images/learning_style_2.png" alt="quiz showing my learning style to be auditory" class="center">
       <p>My learning style scores were all over the place. This indicates to me that my learning style is highly situational, and dependent on the subject matter. I think I should adopt a learning strategy that incorporates all different types because I do not show a strong preference for any particular style. I did score slightly higher in visual and kinesthetic learning styles, so it would be useful to keep that in mind when designing learning strategies for myself. In group situations it would be useful for myself and other visual learners if I was to translate some of the discussion into charts and diagrams. When attempting to solve difficult problems it would be useful for me to get outside and move to help lubricate my thoughts. </p>
       <p>I also undertook the Big 5 personality test. This revealed that I was high in openness and agreeableness, and low in extraversion. I think this shows I would be a useful team member. While not a natural leader or overly talkative, I will value and support other people's ideas and work hard towards implementing them. I will consider unconventional solutions to problems and not seek personal reward or recognition for team accomplishments. </p>
       <div class="ideal_job_images">
