--- a/personal_profile.html
+++ b/personal_profile.html
@@ -8,12 +8,12 @@
     <header>
       <div class="personal_profile_header">
         <h3>Personal<br>Profile</h3>
-        <img style="align-items: center; height: 100px; width: auto;" src="images/personality_head.png" alt="my personality logo">
+        <img style="margin; 0 auto: 100px; width: auto;" src="images/personality_head.png" alt="my personality logo">
       </div>
     </header>
     <main>
       <img src="images/personality_details.png" alt="details of my myer briggs personality test 94% introverted, 66% intuitive, 59% thinking, 65% judging, 74% turbulent">
-      <img src="images/personality_summary.png" alt="my personality summary showing that I am a turbulent architect code INTJ-T ">
+      <img src="images/personality_summary.png" alt="my personality summary showing that I am a turbulent architect code INTJ-T " class = "centre">
       <p>My Myers-Briggs test gave me the result of a turbulent architect. When I read through this profile I felt that it fitted me perfectly, and it made me feel quite validated. It is a rare personality type that struggles to fit in and is capable yet full of self-doubt. I feel like this is an excellent description of me. </p>
       <p>I am agreeable and conscientious. I have a great desire to contribute, do good work and gain the praise of others. However I am shy, have difficulty being a leader, and lack confidence in my own ideas. </p>
       <p>In particular I appreciated the differentiation between turbulent and assertive architect types. They are quite different, and I feel like the turbulent aspect accounts for much of my confusion in life and insecurity. My internal monologue is a constant contradiction between feeling competent and feeling useless. I relate to the social frustrations that architects face, I find every relationship a great challenge, from workplace to romantic, even parenting. I believe I have the insight and analytical skills that architects commonly possess, and share their tendency to exhaustingly overthink every aspect of life. As a turbulent architect, I do not share the same single-minded drive and ambition of assertive types, but perhaps my relationships benefit slightly from my being more conciliatory and consultative. I do feel like I am very strategic with my choices, constantly analysing decisions for optimum input, output and efficiency. This can result in paralysis, however, and wasted effort striving for perfection instead of completion.</p>
@@ -23,7 +23,7 @@
         <img src="images/learning_style_1.png" alt="quiz showing my learning style to be kinaesthetic">
         <img src="images/learning_style_3.png" alt="quiz showing my learning style to be visual">
       </div>
-      <img src="images/learning_style_2.png" alt="quiz showing my learning style to be auditory" class="center">
+      <img src="images/learning_style_2.png" alt="quiz showing my learning style to be auditory" style="margin: 0 auto;">
       <p>My learning style scores were all over the place. This indicates to me that my learning style is highly situational, and dependent on the subject matter. I think I should adopt a learning strategy that incorporates all different types because I do not show a strong preference for any particular style. I did score slightly higher in visual and kinesthetic learning styles, so it would be useful to keep that in mind when designing learning strategies for myself. In group situations it would be useful for myself and other visual learners if I was to translate some of the discussion into charts and diagrams. When attempting to solve difficult problems it would be useful for me to get outside and move to help lubricate my thoughts. </p>
       <p>I also undertook the Big 5 personality test. This revealed that I was high in openness and agreeableness, and low in extraversion. I think this shows I would be a useful team member. While not a natural leader or overly talkative, I will value and support other people's ideas and work hard towards implementing them. I will consider unconventional solutions to problems and not seek personal reward or recognition for team accomplishments. </p>
       <div class="ideal_job_images">
