personal profile header

--- a/personal_profile.html
+++ b/personal_profile.html
@@ -7,13 +7,13 @@
   <body>
     <header>
       <div class="personal_profile_header">
-        <h3>Personal<br>Profile</h3>
-        <img style="margin; 0; auto; height: 100px; width: auto;" src="images/personality_head.png" alt="my personality logo">
+        <h3 style="border: red 1px solid;">Personal<br>Profile</h3>
+        <img style="border: red 1px solid; height: 100px; width: auto;" src="images/personality_head.png" alt="my personality logo">
+        <img style="border: red 1px solid;" src="images/personality_summary.png" alt="my personality summary showing that I am a turbulent architect code INTJ-T " class = "centre">
       </div>
     </header>
     <main>
       <img src="images/personality_details.png" alt="details of my myer briggs personality test 94% introverted, 66% intuitive, 59% thinking, 65% judging, 74% turbulent">
-      <img src="images/personality_summary.png" alt="my personality summary showing that I am a turbulent architect code INTJ-T " class = "centre">
       <p>My Myers-Briggs test gave me the result of a turbulent architect. When I read through this profile I felt that it fitted me perfectly, and it made me feel quite validated. It is a rare personality type that struggles to fit in and is capable yet full of self-doubt. I feel like this is an excellent description of me. </p>
       <p>I am agreeable and conscientious. I have a great desire to contribute, do good work and gain the praise of others. However I am shy, have difficulty being a leader, and lack confidence in my own ideas. </p>
       <p>In particular I appreciated the differentiation between turbulent and assertive architect types. They are quite different, and I feel like the turbulent aspect accounts for much of my confusion in life and insecurity. My internal monologue is a constant contradiction between feeling competent and feeling useless. I relate to the social frustrations that architects face, I find every relationship a great challenge, from workplace to romantic, even parenting. I believe I have the insight and analytical skills that architects commonly possess, and share their tendency to exhaustingly overthink every aspect of life. As a turbulent architect, I do not share the same single-minded drive and ambition of assertive types, but perhaps my relationships benefit slightly from my being more conciliatory and consultative. I do feel like I am very strategic with my choices, constantly analysing decisions for optimum input, output and efficiency. This can result in paralysis, however, and wasted effort striving for perfection instead of completion.</p>
