--- a/project_idea.html
+++ b/project_idea.html
@@ -14,6 +14,7 @@
       <p>But all visions need a first step, a crack that opens the door to generational change and progress. Humans will always consider an option that saves human lives. This pandemic has shown us that in the face of fear, humans will tolerate almost any change. I propose that the first step be Resuscitation Drones, capable of responding to distress calls for humans requiring resuscitation much faster than currently possible, and providing earlier and better care in the first critical minutes of a life-threatening emergency. </p>
       <p>The drones can be instantly responded using a ubiquitous smartphone app, and travel swiftly to the GPS coordinates of the emergency. Final descent and the clinical management of the emergency will be conducted by a medical flight controller. The drone will deliver a defibrillator and oxygen therapy equipment. </p>
       <img class="center" src="images/aed.jpg" alt="an automatic external defibrillator">
+      <p class="caption">An automatic external defibrillator</p>
       <h2>Motivation</h2>
       <p>I am passionate about reducing human reliance on road travel and transport. Humans are poorly equipped to operate motor vehicles (Webber 2019), driving is an inefficient use of our time (Vella 2016), road networks suffocate large portions of the surface of the earth (Watts 2019), and the greenhouse gases of fossil-fueled vehicles are poisoning our planet (Henriques-Gomez, 2018). I wish for my children to live in a world where all travel and transport is conducted using autonomous, self-driving vehicles fuelled by green power sources. A relatively simple step in breaking our reliance on road travel, and showcasing the benefits of artificial intelligence and alternative transport modes, is the idea of Resuscitation Drones.</p>
       <p>Heart attack, or myocardial infarction, is when blood flow to the heart is blocked by a blood clot or buildup of arterial plaque (Heart Foundation). Heart attack claims the lives of 21 Australians per day (Australian Bureau of Statistics, 2018). </p>
@@ -28,8 +29,8 @@
       <p>Early models will prioritise defibrillation, but as the technology develops, I envision robotic arms that can provide chest compressions. Chest compressions are very difficult to perform, must be the correct depth of chest and rhythm, and are physically exhausting as well as intimidating for a bystander. A mechanical and automatic chest compressor attached to the drone could provide perfect compressions without tiring, and in perfect synchronisation with the AED and oxygen equipment. </p>
       <p>Current drones can easily carry 10kg of weight, with much greater capacity for specially designed drones (Drone Enthusiast). A defibrillator weighs approximately 2.5kg (AEDS) and an oxygen cylinder weighs approximately 2.5kg (Wiley). Oxygen delivery equipment is made of very lightweight plastic, so the combined weight of equipment carried will be under 10kg.</p>
       <div class="two_images">
-        <img = src="images/heavy-lift-drone.jpg" alt="a heavy lift drone">
-        <img = src="fast_drone.jpg" alt="a fast drone">
+        <img src="images/heavy-lift-drone.jpg" alt="a heavy lift drone">
+        <img src="fast_drone.jpg" alt="a fast drone">
       </div>
       <p class="caption">A heavy lift drone and a fast drone</p>
       <h2>Tools and Technologies</h2>
