--- a/project_idea.html
+++ b/project_idea.html
@@ -30,7 +30,7 @@
       <p>Current drones can easily carry 10kg of weight, with much greater capacity for specially designed drones (Drone Enthusiast). A defibrillator weighs approximately 2.5kg (AEDS) and an oxygen cylinder weighs approximately 2.5kg (Wiley). Oxygen delivery equipment is made of very lightweight plastic, so the combined weight of equipment carried will be under 10kg.</p>
       <div class="two_images">
         <img src="images/heavy-lift-drone.jpg" alt="a heavy lift drone">
-        <img src="fast_drone.jpg" alt="a fast drone">
+        <img src="images/fast_drone.jpg" alt="a fast drone">
       </div>
       <p class="caption">A heavy lift drone and a fast drone</p>
       <h2>Tools and Technologies</h2>
