ideal job changes

--- a/ideal_job.html
+++ b/ideal_job.html
@@ -9,8 +9,8 @@
       <h3>Ideal<br>Job</h3>
     </header>
     <main>
-      <p><strong><em>Data & Evaluation Lead, PANDA (Perinatal Anxiety & Depression Australia)</strong></em></p>
-      <p><a href="https://www.seek.com.au/job/53537638?type=standout#searchRequestToken=4527c51c-1e42-48df-b394-9057499ed98d">Job advertisement on seek.com.au (Now expired)</a></p>
+      <p style = "text-align:center;"><strong><em>Data & Evaluation Lead, PANDA (Perinatal Anxiety & Depression Australia)</strong></em></p>
+      <p style = "text-align:center; font-size: 10px;"><a href="https://www.seek.com.au/job/53537638?type=standout#searchRequestToken=4527c51c-1e42-48df-b394-9057499ed98d">Job advertisement on seek.com.au (Now expired)</a></p>
       <div class="ideal_job_images">
         <img src="images/ideal_job_1.png" alt="screenshot 1 of my ideal job from advertisement">
         <img src="images/ideal_job_2.png" alt="screenshot 2 of my ideal job from advertisement">
