--- a/personal_profile.html
+++ b/personal_profile.html
@@ -11,7 +11,7 @@
           <h3 style="border: red 1px solid;">Personal<br>Profile</h3>
         </div>
         <div>
-          <img style="border: red 1px solid; height: 100px; width: auto;" src="images/personality_head.png" alt="my personality logo">
+          <img style="margin-left: 300px; border: red 1px solid; height: 100px; width: auto;" src="images/personality_head.png" alt="my personality logo">
         </div>
         <div>
           <img style="border: red 1px solid;" src="images/personality_summary.png" alt="my personality summary showing that I am a turbulent architect code INTJ-T " class = "centre">
