--- a/personal_profile.html
+++ b/personal_profile.html
@@ -8,13 +8,13 @@
     <header>
       <div class="personal_profile_header">
         <div>
-          <h3 style="border: red 1px solid;">Personal<br>Profile</h3>
+          <h3>Personal<br>Profile</h3>
         </div>
         <div>
-          <img style="margin-left: 300px; border: red 1px solid; height: 100px; width: auto;" src="images/personality_head.png" alt="my personality logo">
+          <img style="margin-left: 300px; height: 100px; width: auto;" src="images/personality_head.png" alt="my personality logo">
         </div>
         <div>
-          <img style="border: red 1px solid;" src="images/personality_summary.png" alt="my personality summary showing that I am a turbulent architect code INTJ-T " class = "centre">
+          <img src="images/personality_summary.png" alt="my personality summary showing that I am a turbulent architect code INTJ-T " class = "centre">
         </div>
       </div>
     </header>
