--- a/project_idea.html
+++ b/project_idea.html
@@ -29,8 +29,8 @@
       <p>Early models will prioritise defibrillation, but as the technology develops, I envision robotic arms that can provide chest compressions. Chest compressions are very difficult to perform, must be the correct depth of chest and rhythm, and are physically exhausting as well as intimidating for a bystander. A mechanical and automatic chest compressor attached to the drone could provide perfect compressions without tiring, and in perfect synchronisation with the AED and oxygen equipment. </p>
       <p>Current drones can easily carry 10kg of weight, with much greater capacity for specially designed drones (Drone Enthusiast). A defibrillator weighs approximately 2.5kg (AEDS) and an oxygen cylinder weighs approximately 2.5kg (Wiley). Oxygen delivery equipment is made of very lightweight plastic, so the combined weight of equipment carried will be under 10kg.</p>
       <div class="personal_profile_header">
-        <img src="images/heavy-lift-drone.jpg" alt="a heavy lift drone">
-        <img src="images/fast_drone.jpg" alt="a fast drone">
+        <img style="margin: 0 30px;" src="images/heavy-lift-drone.jpg" alt="a heavy lift drone">
+        <img style="margin: 0 30px;" src="images/fast_drone.jpg" alt="a fast drone">
       </div>
       <p class="caption">A heavy lift drone and a fast drone</p>
       <h2>Tools and Technologies</h2>
