--- a/personal_profile.html
+++ b/personal_profile.html
@@ -5,10 +5,10 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header>
+    <header style="margin: 0 30px 0 30px;">
       <div class="personal_profile_header">
         <div>
-          <h3>Personal<br>Profile</h3>
+          <h3 style="margin: 100px 30px;">Personal<br>Profile</h3>
         </div>
         <div>
           <img style="margin-left: 300px; height: 100px; width: auto;" src="images/personality_head.png" alt="my personality logo">
