added picture to personal info

--- a/personal_information.html
+++ b/personal_information.html
@@ -6,7 +6,14 @@
   </head>
   <body>
     <header>
-      <h3>Personal<br>Information</h3>
+      <div class="personal_profile_header">
+        <div>
+          <h3>Personal<br>Information</h3>
+        </div>
+        <div>
+          <img style="margin-left: 300px; height: 100px; width: auto;" src="images/nicholas_richards.jpg" alt="face of nicholas richards">
+        </div>
+      </div>
     </header>
     <main>
       <p>I am Sydney born and raised, but ten years ago, when I had young children, I decided to move out of the city for the space and fresh air promised by the beautiful Southern Highlands, two hours south-west of Sydney. </p>
